--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,6 @@
 # HTID:11515375: DO NOT REMOVE OR MODIFY THIS LINE AND THE LINES BELOW
 php_value display errors 1
 php_value session.auto_start 1
-# DO NOT REMOVE OR MODIFYTHIS LINE AND THE LINES ABOVE HTID:11515375:
+# DO NOT REMOVE OR MODIFYTHIS LINE AND THE LINES ABOVE HTID:11515375
+:
+
